messagepack-derive-test/tests/fail/name_value_attr.stderr
error: expected #[msgpack(...)] field attribute
 --> tests/fail/name_value_attr.rs:5:7
  |
5 |     #[msgpack = "bytes"]
  |       ^^^^^^^
